[package]
name = "combot"
version = "0.1.0"
authors = ["Chad Baxter <cbax@doslabelectronics.com>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
csv = "1.1.6"
regex = "1.4.5"