[package]
name = "combot"
version = "0.1.1"
authors = ["Chad Baxter <cbax@doslabelectronics.com>"]
description = "A utility to parse server access logs and detect bots based on URI paths and User Agents."
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/LogoiLab/combot"
readme = "README.md"
keywords = ["security", "cli", "parsing"]
categories = ["command-line-utilities", "parser-implementations"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
csv = "1.1.6"
regex = "1.4.5"